--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -2,16 +2,32 @@
 
 <!-- DASHBOARD -->
 <div class="row">
-  <div *ngIf="identity" class="navigation col-lg-1">
+  <div *ngIf="identity" class="navigation col-lg-2">
     <h1>{{title}}</h1>
+    <nav id="navigation">
+        <a ><span class="fas fa-search" aria-hidden="true"></span> Search</a>
+        <a ><span class="fas fa-star" aria-hidden="true"></span> Artists</a>
+        <a ><span class="fas fa-music" aria-hidden="true"></span >Albums</a>   
+
+    </nav>
+    <nav id="user_logged">
+        <p>{{identity.name}}</p>
+
+       
+        <a  [routerLink]="['/user-data']"><span class="fas fa-cog" aria-hidden="true" ></span>Account settings</a>
+        <span class="btn btn-success" (click)="logOut()">Log out</span>
+    </nav>
+
   </div>
   <div class="clearfix"></div>
 
-  <div *ngIf="identity" class="central col-lg-11">
-    <p>Log Successful! Welcome  {{identity.name}} {{identity.surname}}</p>
-    <app-user-edit></app-user-edit> 
-    <div class="logout-button" (click)="logOut()">Log out</div>
+  <div *ngIf="identity" class="central col-lg-10">
+    
+    <router-outlet></router-outlet>
+   
   </div>
+
+
 
 </div>
 
