--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,9 +1,14 @@
 <div class="container-fluid">
 
+
 <!-- DASHBOARD -->
 <div class="row">
-  <div *ngIf="identity" class="navigation col-lg-2">
-    <h1>{{title}}</h1>
+  <div *ngIf="identity" class="navigation col-lg-1">
+    <h1 class="head-title">
+        <a [routerLink]="['/']">
+            {{title}}
+        </a>
+    </h1>
     <nav id="navigation">
         <a ><span class="fas fa-search" aria-hidden="true"></span> Search</a>
         <a ><span class="fas fa-star" aria-hidden="true"></span> Artists</a>
@@ -11,7 +16,11 @@
 
     </nav>
     <nav id="user_logged">
-        <p>{{identity.name}}</p>
+        <div class="user-image img-thumbnail"  style="width: 150px">
+        <img id="user-image" src="{{url + 'user-get-avatar/' + identity.image}}" alt="" style="width: 100%">
+        </div>
+
+        <span id="identity_name">{{identity.name}}</span>
 
        
         <a  [routerLink]="['/user-data']"><span class="fas fa-cog" aria-hidden="true" ></span>Account settings</a>
@@ -19,9 +28,9 @@
     </nav>
 
   </div>
-  <div class="clearfix"></div>
 
-  <div *ngIf="identity" class="central col-lg-10">
+
+  <div *ngIf="identity" class="central col-lg-11">
     
     <router-outlet></router-outlet>
    
