--- a/front/src/app/app.component.css
+++ b/front/src/app/app.component.css
@@ -9,25 +9,26 @@
 
 }
 .container-fluid .row {
-  
-  height: 100vh;
+
+	height: 100vh;
 }
 
 
 /*LOGIN*/
 
 #log_reg {
-  background-image : url(../assets/img/music_background_wallpaper.jpg);
+	
+	transform: translate(-50%, -50%);
+	top: 50%;
+	left: 50%;
+	position: absolute;
 
-  background-position: center;
-  background-size: cover;
-  height: 100vh;
 }
 
 .login-page {
-  width: 360px;
-  padding: 8% 0 0;
-  margin: auto;
+	width: 360px;
+	padding: 8% 0 0;
+	margin: auto;
 }
 
 .form {
@@ -70,7 +71,7 @@
   color: #68c39f;
 }
 
-.form button {
+.form .button {
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   outline: 0;
@@ -85,32 +86,30 @@
   cursor: pointer;
 }
 
-.form button:hover,
-.form button:active,
-.form button:focus {
+.form .button:hover,
+.form .button:active,
+.form .button:focus {
   background: #5cdeab;
 
 }
 .logout-button {
-  font-family: "Roboto", sans-serif;
-  text-transform: uppercase;
-  text-align: center;
-  outline: 0;
-  background: #68c39f;
-  width: 100px;
-  border: 0;
-  padding: 15px;
-  color: #FFFFFF;
-  font-size: 14px;
-  -webkit-transition: all 0.3 ease;
-  transition: all 0.3 ease;
-  cursor: pointer;
+	font-family: "Roboto", sans-serif;
+	text-transform: uppercase;
+	text-align: center;
+	border: 1px solid #68c39f;
+	width: 100%;
+	padding: 10px;
+	color: #68c39f !important;
+	font-size: 12px;
+	-webkit-transition: all 0.3 ;
+	transition: all 0.3 ;
+	cursor: pointer;
 }
 
-.logout-button:hover,
-.logout-button:active,
-.logout-button:focus {
-  background: #5cdeab;
+.logout-button:hover {
+	background: #5cdeab;
+	color: white !important;
+
 
 }
 
@@ -124,12 +123,6 @@
 .form .message a {
   color: #4CAF50;
   text-decoration: none;
-}
-
-.form .register-form {
-  /* display: none */
-  
-  
 }
 
 .form .login-form {
@@ -148,10 +141,7 @@
     -moz-osx-font-smoothing: grayscale;
   }
 
-  html,body {
-    margin: 0px;
-    height: 100%;
-  }
+
 
   .head-title {
     font-size: 18px;
@@ -168,7 +158,7 @@
   .navigation {
     text-align: center;
     color: white;
-    background: rgba(39, 38, 43, 0.8);
+    background: rgba(70, 69, 73, 0.8);
   }
   .navigation a {
     color: #ddd;
@@ -185,17 +175,16 @@
     width: 100%;
   }
 
-  #user_logged {
-    
+  #user_logged { 
 
     position: absolute;
-    bottom: 10px;
-    width: 75%;
-	border-top: 1px solid #444444;
+    bottom: 20px;
+    width: 80%;
+	border-top: 1px solid #828282;
 	padding-top: 20px;
   }
   #user_logged a {
-    text-decoration: none;
+	text-decoration: none;
 
   }
   #user_logged a:hover {
@@ -215,6 +204,12 @@
     width: 70%;
   
   }
+
+  .logout-button .fas.fa-sign-out-alt {
+	  font-size: 16px;
+	  display: inline;
+  }
+
 
 
 
