--- a/front/src/app/components/user-edit/user-edit.component.css
+++ b/front/src/app/components/user-edit/user-edit.component.css
@@ -17,3 +17,26 @@
       color .7s;
 
 }
+
+.button {
+    font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    outline: 0;
+    color: #44afe9;
+    width: 120px;
+    border: 1px solid #44afe9;
+    background-color: transparent;
+    padding: 10px;
+    font-size: 14px;
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
+    cursor: pointer;
+}
+
+.button:hover,
+.button:active,
+.button:focus {
+    background: #3694c7;
+    color: white;
+
+}
