--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -1,3 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+.padding-20 {
+    padding: 20px;
+}
+.mainJumbo {
+    background-color: rgba(233, 236, 239, 0.6);
+
+}
+
+.activeLink {
+    border-bottom: 4px solid #84BD00;
+    padding-bottom: 4px;
+}
 
 
