--- a/front/src/app/components/artist-list/artist-list.component.html
+++ b/front/src/app/components/artist-list/artist-list.component.html
@@ -1,5 +1,6 @@
 <div *ngIf="identity" class="head-page">
+  
   <h1>{{titulo}}</h1>
-<a *ngIf="identity && identity.role === 'ROLE_ADMIN'" href="" class="btn btn-primary">Add artist</a>
-
+  
 </div>
+<a *ngIf="identity && identity.role === 'ROLE_ADMIN'" class="btn btn-primary" [routerLink]="['/add-artist']">Add artist</a>
