--- a/front/src/app/app.component.css
+++ b/front/src/app/app.component.css
@@ -3,14 +3,18 @@
 
 /* GENERALES */
 .container-fluid {
-      background-image: url(../assets/img/music_background_wallpaper.jpg);
-      background-position: center;
-      background-size: cover;
+	background-image: url(../assets/img/music_background_wallpaper.jpg);
+	background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
 
 }
 .container-fluid .row {
 
 	height: 100vh;
+}
+.navigation .row {
+	height: inherit;	
 }
 
 
@@ -32,29 +36,29 @@
 }
 
 .form {
-  position: relative;
-  z-index: 1;
-  opacity: 0.8;
-  background: #FFFFFF;
-  max-width: 360px;
-  margin: 0 auto 100px;
-  padding: 45px;
-  height: 460px;
-  text-align: center;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, .2);
+	position: relative;
+	z-index: 1;
+	opacity: 0.8;
+	background: #FFFFFF;
+	max-width: 360px;
+	margin: 0 auto 100px;
+	padding: 45px;
+	height: 460px;
+	text-align: center;
+	box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, .2);
 }
 
 .form input {
-  font-family: "Lato", sans-serif;
-  outline: 0;
-  background: #f2f2f2;
-  width: 100%;
-  border: 0;
-  margin: 0 0 15px;
-  padding: 15px;
-  box-sizing: border-box;
-  font-size: 14px;
-  transition: background-color .5s, color .7s;
+	font-family: "Lato", sans-serif;
+	outline: 0;
+	background: #f2f2f2;
+	width: 100%;
+	border: 0;
+	margin: 0 0 15px;
+	padding: 15px;
+	box-sizing: border-box;
+	font-size: 14px;
+	transition: background-color .5s, color .7s;
 }
 .form input:focus {
     background-color: rgba(104, 195, 159, .7);
@@ -67,29 +71,29 @@
 
 
 .title {
-  margin-bottom: 15px;
-  color: #68c39f;
+	margin-bottom: 15px;
+	color: #68c39f;
 }
 
 .form .button {
-  font-family: "Roboto", sans-serif;
-  text-transform: uppercase;
-  outline: 0;
-  background: #68c39f;
-  width: 100%;
-  border: 0;
-  padding: 15px;
-  color: #FFFFFF;
-  font-size: 14px;
-  -webkit-transition: all 0.3 ease;
-  transition: all 0.3 ease;
-  cursor: pointer;
+	font-family: "Roboto", sans-serif;
+	text-transform: uppercase;
+	outline: 0;
+	background: #68c39f;
+	width: 100%;
+	border: 0;
+	padding: 15px;
+	color: #FFFFFF;
+	font-size: 14px;
+	-webkit-transition: all 0.3 ease;
+	transition: all 0.3 ease;
+	cursor: pointer;
 }
 
 .form .button:hover,
 .form .button:active,
 .form .button:focus {
-  background: #5cdeab;
+  	background: #5cdeab;
 
 }
 .logout-button {
@@ -115,14 +119,14 @@
 
 
 .form .message {
-  margin: 15px 0 0;
-  color: #b3b3b3;
-  font-size: 12px;
+	margin: 15px 0 0;
+	color: #b3b3b3;
+	font-size: 12px;
 }
 
 .form .message a {
-  color: #4CAF50;
-  text-decoration: none;
+	color: #4CAF50;
+	text-decoration: none;
 }
 
 .form .login-form {
@@ -134,49 +138,49 @@
 
 
 /* DASHBOARD */
-  body {
-    background: #f3f3f3;
-    font-family: "Roboto", sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
+body {
+	background: #f3f3f3;
+	font-family: "Roboto", sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
 
 
 
-  .head-title {
-    font-size: 18px;
-    font-weight: bold;
-    text-transform: uppercase;
-    margin-bottom: 20px;
-    display: block;
-  }
-  .head-title a{
-    text-decoration: none;
-  }
+.head-title {
+	font-size: 18px;
+	font-weight: bold;
+	text-transform: uppercase;
+	margin-bottom: 20px;
+	display: block;
+}
+.head-title a{
+	text-decoration: none;
+}
 
-  
-  .navigation {
-    text-align: center;
-    color: white;
-    background: rgba(70, 69, 73, 0.8);
-  }
-  .navigation a {
-    color: #ddd;
-    margin: 20px 0;
-    display: block;
-    text-decoration: none;
 
-  }
-  .navigation a:hover {
-    color: white;
-  }
-  .navigation .fas {
-    font-size: 20px;
-    display: block;
-    width: 100%;
-  }
+.navigation {
+	text-align: center;
+	color: white;
+	background: rgba(70, 69, 73, 0.8);
+}
+.navigation a {
+	color: #ddd;
+	margin: 20px 0;
+	display: block;
+	text-decoration: none;
 
-  #user_logged { 
+}
+.navigation a:hover {
+	color: white;
+}
+.navigation .fas {
+	font-size: 20px;
+	display: block;
+	width: 100%;
+}
+
+#user_logged { 
 
 	position: absolute;
 	bottom: 20px;
@@ -186,36 +190,39 @@
 	border-top: 1px solid #828282;
 	padding-top: 20px;
 
-  }
-  #user_logged a {
+}
+#user_logged a {
 	text-decoration: none;
 
-  }
-  #user_logged a:hover {
-    color: white;
+}
+#user_logged a:hover {
+	color: white;
 
-  }
+}
 
-  .central {
+.central {
 
-    color: white;
-  }
-  .user-image {
-	  width: 100%;
-  }
+	color: white;
+}
+.user-image {
+	width: 100%;
 
-  .user-image img {
-    width: 70%;
-  
-  }
+}
 
-  .logout-button .fas.fa-sign-out-alt {
-	  font-size: 16px;
-	  display: inline;
-  }
- .logout-button .logout-text {
-   margin-left: 5px;
- }
+.user-image img {
+	width: 70%;
+	border-radius: 100px;
+
+
+}
+
+.logout-button .fas.fa-sign-out-alt {
+	font-size: 16px;
+	display: inline;
+}
+.logout-button .logout-text {
+	margin-left: 5px;
+}
 
 
 
@@ -223,65 +230,65 @@
 /* RESPONSIVE */
 
 @media screen and (max-width: 1420px) {
-  #identity_name {
-    font-size: 14px;
-  }
-  
-  a.btn.logout-button {
-    font-size: 10px;
-    width: 60px;
-    display: block;
-    margin: 0 auto;
-  }
+#identity_name {
+	font-size: 14px;
+}
 
-  .logout-button .logout-text {
-    display: none;
-  }
+a.btn.logout-button {
+	font-size: 10px;
+	width: 60px;
+	display: block;
+	margin: 0 auto;
+}
+
+.logout-button .logout-text {
+	display: none;
+}
 
 }
 
 /* GALAXY S5 */
 @media screen and (max-width: 360px) and (max-height: 640px) {
 
-	#user_logged .nav-item-text,
-	#identity_name,
-	#navigation .nav-item-text,
-	.head-title,
-	.user-image {
+#user_logged .nav-item-text,
+#identity_name,
+#navigation .nav-item-text,
+.head-title,
+.user-image {
 
-		display: none;
-	}
-	.navigation {
-		height: 10%;
-	}
+	display: none;
+}
+.navigation {
+	height: 10%;
+}
 
-	#navigation {
-		width: 45%;
-	}
-	#navigation a,
-	#user_logged a {
+#navigation {
+	width: 45%;
+}
+#navigation a,
+#user_logged a {
 
-		display: inline-block;
-		margin: 5px 10px;
-	}
+	display: inline-block;
+	margin: 5px 10px;
+}
 
-	#user_logged {
-		width: 45%;
-		position: initial;
-		transform: translateX(50%);
-		display: block;
-		padding-top: 0;
-		border: 0;
+#user_logged {
+	width: 45%;
+	position: initial;
+	transform: translateX(50%);
+	display: block;
+	padding-top: 0;
+	border: 0;
 
-	}
-	#user_logged a {
-		display: inline-block;
+}
+#user_logged a {
+	display: inline-block;
 
-	}
+}
 
-	#identity_name {
-		display: none;
-	}
+#identity_name {
+	display: none;
+}
 
 
 
