--- a/front/src/app/components/home/home.component.html
+++ b/front/src/app/components/home/home.component.html
@@ -1,19 +1,24 @@
 	<div class="jumbotron mainJumbo">
 	<div class="container">
-		<h1 class="display-3">Hello, world!</h1>
-		<p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and
-		three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-		<p>
-		<a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a>
-		</p>
+		<h1 class="display-4">Welcome to musify!</h1>
+		<p>We're glad you're here. Now enjoy some great music while you work or study, here you will find some of the greatest hits!.</p>
+		
 	</div>
 	</div>
 
-	<div class="container">
-	<!-- Example row of columns -->
+	<div class="container central-options">
 	<div class="row">
-		<div class="col-md-4">
-		<h2>Heading</h2>
+		<div class="col-sm-12 col-md-4">
+		<h2>Artists</h2>
+		<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
+			nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+			</p>
+		<p>
+			<a class="btn btn-secondary" href="#" role="button" [routerLink]="['/artists',1]">View details &raquo;</a>
+		</p>
+		</div>
+		<div class="col-sm-12 col-md-4">
+		<h2>Albums</h2>
 		<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
 			nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
 			</p>
@@ -21,17 +26,8 @@
 			<a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
 		</p>
 		</div>
-		<div class="col-md-4">
-		<h2>Heading</h2>
-		<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
-			nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-			</p>
-		<p>
-			<a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
-		</p>
-		</div>
-		<div class="col-md-4">
-		<h2>Heading</h2>
+		<div class="col-sm-12 col-md-4">
+		<h2>Songs</h2>
 		<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod
 			semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet
 			risus.</p>
@@ -44,6 +40,5 @@
 	<hr>
 
 	</div>
-	<!-- /container -->
 
 
