--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -1,4 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+/* GENERALES */
+html{
+    
+    background-image:  rgba(66, 66, 67, 1) url(assets/img/music_background_wallpaper.jpg) no-repeat center fixed; 
+    /* bac */
+    /* background-position: center;
+    background-size: cover; */
+}
+.container-fluid {
+}
+
+.container-fluid .row {
+  height: 100vh;
+}
+.container .row {
+  height: 100vh;
+}
+
+
+
 .padding-20 {
     padding: 20px;
 }
