--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -14,7 +14,7 @@
     <div class="row">
       <nav id="navigation" class="col-lg-12 ">
           <a ><span class="fas fa-search" aria-hidden="true"></span> <span class="nav-item-text">Search</span></a>
-          <a [routerLink]="['/artists',1]" [routerLinkActive]="['activeLink']"><span class="fas fa-star" aria-hidden="true"></span> <span class="nav-item-text">Artists</span></a>
+          <a [routerLink]="['/artists/1']" [routerLinkActive]="['activeLink']"><span class="fas fa-star" aria-hidden="true"></span> <span class="nav-item-text">Artists</span></a>
           <a ><span class="fas fa-music" aria-hidden="true"></span ><span class="nav-item-text">Albums</span></a>   
   
       </nav>
