--- a/front/src/app/components/artist-detail/artist-detail.component.html
+++ b/front/src/app/components/artist-detail/artist-detail.component.html
@@ -6,10 +6,10 @@
 		</div>		
 
 		<div class="data">
-			<h1>{{artist.name}}</h1>
-			<p>{{artist.description}}</p>
+			<h1 [innerHTML]="artist.name"></h1>
+			<p [innerHTML]="artist.description"></p>
 
-			<a *ngIf="identity.role === 'ROLE_ADMIN'" class="btn btn-dark">Add album</a>
+			<a *ngIf="identity.role === 'ROLE_ADMIN'" [routerLink]="['/add-album', artist._id]" class="btn btn-dark">Add album</a>
 		</div>
 	</div>
 	<div class="clearfix"></div>
